Fix style that was causing fonts to be too small

--- a/helpserver/themes/default/theme.css
+++ b/helpserver/themes/default/theme.css
@@ -80,12 +80,9 @@ body {
 }
 
 body {
-	font: 76%/1.5em Verdana, Arial, sans-serif;
+	font: 10pt Arial, sans-serif;
 	color: #000;
 	background: #fff}
-
-html > body,
-*:first-child+html body {font-size: 74% !important}
 
 a,
 a:visited {
